sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/photoprism/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: photoprism
    app.kubernetes.io/name: photoprism
  name: photoprism
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: photoprism
      app.kubernetes.io/name: photoprism
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: photoprism
        app.kubernetes.io/name: photoprism
    spec:
      securityContext:
        # Ensures the storage volume permissions match
        fsGroup: 9002
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - envFrom:
            - configMapRef:
                name: photoprism-config
            - secretRef:
                name: photoprism-credentials
          image: photoprism/photoprism:261007
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /library/login
              port: http
            initialDelaySeconds: 120
            timeoutSeconds: 10
          name: photoprism
          ports:
            - containerPort: 2342
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /library/login
              port: http
            initialDelaySeconds: 120
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 3Gi
          securityContext:
            # Required for /dev/dri access
            privileged: true
          volumeMounts:
            - mountPath: /photoprism/storage
              name: storage
            - mountPath: /dev/dri
              name: dev-dri
            - mountPath: /photos
              name: photos
              subPath: backup/photos
      nodeSelector:
        k8s.dalmura.cloud/nodegroup: eq14-worker-pool
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: photoprism-storage
        - hostPath:
            path: /dev/dri
          name: dev-dri
        - name: photos
          nfs:
            server: atlas.wlanding.dalmura.com.au
            path: /data
