sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/photoprism/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: photoprism
    app.kubernetes.io/name: photoprism
  name: photoprism
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.kubernetes.io/hostname: photos.indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
    #traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
spec:
  ingressClassName: ingress-private
  tls:
    - hosts:
      - photos.indigo.dalmura.cloud
      secretName: photoprism-cert
  rules:
  - host: photos.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photoprism
            port:
              number: 80
