sites/indigo/clusters/dal-indigo-core-1/wave-5/overlays/photoprism/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: photoprism
  namespace: photoprism
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: photoprism
      app.kubernetes.io/instance: photoprism
  ingress:
    # Allow traffic from Traefik Private
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-private
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "2342"
              protocol: TCP

  egress:
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow egress to Traefik Public (Internal Ingress)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-public
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Performs an apt update at the start
    - toFQDNs:
        - matchName: "archive.ubuntu.com"
        - matchName: "security.ubuntu.com"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
